--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cloudinary": "^1.14.0",
     "express": "^4.16.4",
     "mongodb": "^3.2.3",
     "morgan": "^1.9.1",
+    "multer": "^1.4.1",
+    "multer-storage-cloudinary": "^2.2.1",
     "nodemon": "^1.18.10",
     "winston": "^3.2.1"
   }
