--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "multer": "^1.4.1",
     "multer-storage-cloudinary": "^2.2.1",
     "nodemon": "^1.18.10",
+    "socket.io": "^2.2.0",
     "winston": "^3.2.1"
   }
 }
